# SoundMixrEffect

./: .gitmodules  CMakeLists.txt  README.md
source/: Effect.cpp
